test/testdata/classes/methods/init/not_indexable_assignment_error.lox
class Foo {
  init() {}
}
Foo().init[0] = 0; // error: 'function' value is not indexable
